--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,9 @@ jobs:
     steps:
       - checkout
 
-      - run: npm run build
+      - run: |
+          npm ci
+          npm run build
 
       - setup_remote_docker
       - run: |
