--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,9 @@ jobs:
       - setup_remote_docker
       - run: |
           RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"
-          DOCKER_IMAGE_FULL_NAME="$CIRCLE_PROJECT_REPONAME:$RELEASE_VERSION"
+          DOCKER_IMAGE_FULL_NAME="$CIRCLE_PROJECT_REPONAME:circleci-$RELEASE_VERSION"
           docker build -t "$DOCKER_IMAGE_FULL_NAME" .
+      - run: docker push  "$DOCKER_IMAGE_FULL_NAME"
 
       # # Download and cache dependencies
       # - restore_cache:
