--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,10 @@ jobs:
       - run: |
           RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"
           DOCKER_IMAGE_FULL_NAME="$CIRCLE_PROJECT_REPONAME:0.$RELEASE_VERSION"
-          docker build -t $DOCKER_IMAGE_FULL_NAME .
+          docker build -t "$DOCKER_IMAGE_FULL_NAME" .
       - run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASS
-          docker push $DOCKER_IMAGE_FULL_NAME
+          docker push "$DOCKER_IMAGE_FULL_NAME"
 
       # # Download and cache dependencies
       # - restore_cache:
