--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,10 @@ jobs:
       
     steps:
       - checkout
-
-      - run: |
-          npm ci
-          npm run build
-
       - setup_remote_docker
       - run: |
           RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"
-          DOCKER_IMAGE_FULL_NAME="$CIRCLE_PROJECT_REPONAME:0.$RELEASE_VERSION"
+          DOCKER_IMAGE_FULL_NAME="$CIRCLE_PROJECT_REPONAME:$RELEASE_VERSION"
           docker build -t "$DOCKER_IMAGE_FULL_NAME" .
       - run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASS
