--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,19 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run: |
-          RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"
-          DOCKER_IMAGE_FULL_NAME="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$RELEASE_VERSION"
-          docker build -t "$DOCKER_IMAGE_FULL_NAME" .
-      - run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
-          docker push "$DOCKER_IMAGE_FULL_NAME"
+      - run:
+          name: Setter miljøvariable
+          command: |
+            echo 'export RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"' >> $BASH_ENV
+            echo 'export DOCKER_IMAGE_FULL_NAME="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$RELEASE_VERSION"' >> $BASH_ENV
+      - run:
+          name: Bygger Docker image
+          command: docker build -t "$DOCKER_IMAGE_FULL_NAME" .
+      - run:
+          name: Pusher Docker image
+          command: |
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker push "$DOCKER_IMAGE_FULL_NAME"
 
       # # Download and cache dependencies
       # - restore_cache:
