--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,17 +12,15 @@ jobs:
           name: Setter miljøvariable
           command: |
             echo 'export RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"' >> $BASH_ENV
-            echo 'export $DOCKER_IMAGE_VERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$RELEASE_VERSION"' >> $BASH_ENV
-            echo 'export $DOCKER_IMAGE_UNVERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"' >> $BASH_ENV
+            echo 'export DOCKER_IMAGE_FULL_NAME="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$RELEASE_VERSION"' >> $BASH_ENV
       - run:
           name: Bygger Docker image
-          command: docker build -t "$DOCKER_IMAGE_VERSIONED" -t "$DOCKER_IMAGE_UNVERSIONED" .
+          command: docker build -t "$DOCKER_IMAGE_FULL_NAME" .
       - run:
           name: Pusher Docker image
           command: |
             docker login -u $DOCKER_USER -p $DOCKER_PASS
-            docker push "$DOCKER_IMAGE_VERSIONED"
-            docker push "$DOCKER_IMAGE_UNVERSIONED"
+            docker push "$DOCKER_IMAGE_FULL_NAME"
 
       # # Download and cache dependencies
       # - restore_cache:
