--- a/nais.yaml
+++ b/nais.yaml
@@ -1,10 +1,16 @@
-image: navikt/tiltaksgjennomforing
-port: 80
-team: tag
-healthcheck:
-  liveness:
-    path: /isAlive
-    initialDelay: 20
-  readiness:
-    path: /isReady
-    initialDelay: 20
+apiVersion: "nais.io/v1alpha1"
+kind: "Application"
+metadata:
+  name: tiltaksgjennomforing
+  namespace: default
+spec:
+  image: navikt/tiltaksgjennomforing:latest
+  team: tag
+  port: 80
+  healthcheck:
+    liveness:
+      path: /isAlive
+      initialDelay: 20
+    readiness:
+      path: /isReady
+      initialDelay: 20
