--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "private": true,
   "dependencies": {
     "@navikt/create-react-app-typescript-less": "^1.0.0-beta.14",
+    "@types/react-router-dom": "^4.3.1",
     "classnames": "^2.2.6",
+    "firebase": "^5.5.6",
     "lodash.throttle": "^4.1.1",
+    "moment": "^2.22.2",
     "nav-frontend-core": "^4.0.5",
     "nav-frontend-js-utils": "^1.0.6",
     "nav-frontend-knapper": "^1.0.21",
     "nav-frontend-knapper-style": "^0.3.19",
+    "nav-frontend-lenker": "^1.0.18",
+    "nav-frontend-lenker-style": "^0.2.16",
     "nav-frontend-paneler": "^1.0.10",
     "nav-frontend-paneler-style": "^0.3.11",
     "nav-frontend-skjema": "^1.0.40",
@@ -21,7 +26,8 @@
     "nav-frontend-typografi-style": "^1.0.10",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start:less": "less-watch-compiler",
