--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,25 +4,31 @@ jobs:
 
     docker:
       - image: circleci/node:10
-      
+
     steps:
       - checkout
-      - setup_remote_docker
       - run:
-          name: Setter miljøvariable
+          name: Bygg React app
           command: |
-            echo 'export RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"' >> $BASH_ENV
-            echo 'export DOCKER_IMAGE_VERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$RELEASE_VERSION"' >> $BASH_ENV
-            echo 'export DOCKER_IMAGE_UNVERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"' >> $BASH_ENV
-      - run:
-          name: Bygger Docker image
-          command: docker build -t "$DOCKER_IMAGE_VERSIONED" -t "$DOCKER_IMAGE_UNVERSIONED" .
-      - run:
-          name: Pusher Docker image
-          command: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-            docker push "$DOCKER_IMAGE_VERSIONED"
-            docker push "$DOCKER_IMAGE_UNVERSIONED"
+            npm ci
+            npm run build
+
+#      - setup_remote_docker
+#      - run:
+#          name: Setter miljøvariable
+#          command: |
+#            echo 'export RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"' >> $BASH_ENV
+#            echo 'export DOCKER_IMAGE_VERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$RELEASE_VERSION"' >> $BASH_ENV
+#            echo 'export DOCKER_IMAGE_UNVERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"' >> $BASH_ENV
+#      - run:
+#          name: Bygger Docker image
+#          command: docker build -t "$DOCKER_IMAGE_VERSIONED" -t "$DOCKER_IMAGE_UNVERSIONED" .
+#      - run:
+#          name: Pusher Docker image
+#          command: |
+#            docker login -u $DOCKER_USER -p $DOCKER_PASS
+#            docker push "$DOCKER_IMAGE_VERSIONED"
+#            docker push "$DOCKER_IMAGE_UNVERSIONED"
 
       # # Download and cache dependencies
       # - restore_cache:
@@ -35,4 +41,3 @@ jobs:
           # paths:
             # - node_modules
           # key: v1-dependencies-{{ checksum "package.json" }}
-
