--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@navikt/create-react-app-typescript-less": "^1.0.0-beta.14",
+    "@types/react-collapse": "^4.0.2",
     "@types/react-day-picker": "^5.3.0",
     "@types/react-intl": "^2.3.11",
     "@types/react-maskedinput": "^4.0.4",
@@ -15,7 +16,10 @@
     "firebase": "^5.5.6",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.22.2",
+    "nav-frontend-chevron-style": "^0.3.4",
     "nav-frontend-core": "^4.0.5",
+    "nav-frontend-ekspanderbartpanel": "^1.0.17",
+    "nav-frontend-ekspanderbartpanel-style": "^0.3.15",
     "nav-frontend-etiketter": "^1.0.16",
     "nav-frontend-etiketter-style": "^0.3.14",
     "nav-frontend-js-utils": "^1.0.6",
@@ -35,10 +39,12 @@
     "nav-frontend-typografi-style": "^1.0.10",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-collapse": "^4.0.3",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.6.3",
     "react-intl": "^2.7.2",
     "react-maskedinput": "^4.0.1",
+    "react-motion": "^0.5.2",
     "react-router-dom": "^4.3.1"
   },
   "scripts": {
