--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "nav-frontend-ekspanderbartpanel-style": "^0.3.15",
     "nav-frontend-etiketter": "^1.0.16",
     "nav-frontend-etiketter-style": "^0.3.14",
+    "nav-frontend-hjelpetekst": "^1.0.27",
+    "nav-frontend-hjelpetekst-style": "^0.3.25",
+    "nav-frontend-ikoner-assets": "^0.2.29",
     "nav-frontend-js-utils": "^1.0.6",
     "nav-frontend-knapper": "^1.0.21",
     "nav-frontend-knapper-style": "^0.3.19",
