--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,31 @@
 version: 2
 jobs:
   build:
-
     docker:
-      - image: circleci/node:10
+    - image: circleci/node:10
 
     steps:
-      - checkout
-      - run:
-          name: Bygg React app
-          command: |
-            npm ci
-            npm run build
+    - checkout
+    - run:
+        name: Bygg React app
+        command: |
+          npm run build
 
-#      - setup_remote_docker
-#      - run:
-#          name: Setter miljøvariable
-#          command: |
-#            echo 'export RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"' >> $BASH_ENV
-#            echo 'export DOCKER_IMAGE_VERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$RELEASE_VERSION"' >> $BASH_ENV
-#            echo 'export DOCKER_IMAGE_UNVERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"' >> $BASH_ENV
-#      - run:
-#          name: Bygger Docker image
-#          command: docker build -t "$DOCKER_IMAGE_VERSIONED" -t "$DOCKER_IMAGE_UNVERSIONED" .
-#      - run:
-#          name: Pusher Docker image
-#          command: |
-#            docker login -u $DOCKER_USER -p $DOCKER_PASS
-#            docker push "$DOCKER_IMAGE_VERSIONED"
-#            docker push "$DOCKER_IMAGE_UNVERSIONED"
-
-      # # Download and cache dependencies
-      # - restore_cache:
-          # keys:
-          # - v1-dependencies-{{ checksum "package.json" }}
-          # # fallback to using the latest cache if no exact match is found
-          # - v1-dependencies-
-
-      # - save_cache:
-          # paths:
-            # - node_modules
-          # key: v1-dependencies-{{ checksum "package.json" }}
+    - setup_remote_docker
+    - run:
+        name: Setter miljøvariable
+        command: |
+          echo 'export RELEASE_VERSION="$(git rev-list --count $CIRCLE_SHA1)"' >> $BASH_ENV
+          echo 'export BRANCH_NAME="$(git rev-parse --abbrev-ref HEAD)"' >> $BASH_ENV
+          echo 'export BRANCH_PREFIX=`[ $BRANCH_NAME == "master" ] && echo "" || echo $BRANCH_NAME\_`' >> $BASH_ENV
+          echo 'export DOCKER_IMAGE_VERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$BRANCH_PREFIX$RELEASE_VERSION"' >> $BASH_ENV
+          echo 'export DOCKER_IMAGE_UNVERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"' >> $BASH_ENV
+    - run:
+        name: Bygger Docker image
+        command: docker build -t "$DOCKER_IMAGE_VERSIONED" -t "$DOCKER_IMAGE_UNVERSIONED" .
+    - run:
+        name: Pusher Docker image
+        command: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker push "$DOCKER_IMAGE_VERSIONED"
+          docker push "$DOCKER_IMAGE_UNVERSIONED"
