'npm ci' må gjøres før 'npm run build'.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
     - run:
         name: Bygg React app
         command: |
+          npm ci
           npm run build
 
     - setup_remote_docker
