--- a/nais.yaml
+++ b/nais.yaml
@@ -3,6 +3,8 @@ kind: "Application"
 metadata:
   name: tiltaksgjennomforing
   namespace: default
+  labels:
+    team: teamtag
 spec:
   image: navikt/tiltaksgjennomforing:latest
   team: teamtag
