--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "build": "react-scripts-ts build",
     "build:server": "tsc -p tsconfig.server.json",
     "test": "react-scripts-ts test --env=jsdom",
-    "server": "npm run build:server && npm run start:server",
+    "server": "npm run build:server && npm run start:server"
   },
   "devDependencies": {
     "@navikt/create-react-app-typescript-less": "^1.0.0-beta.16",
