--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "chai": "^4.2.0",
     "classnames": "^2.2.6",
     "event-stream": "^4.0.1",
     "firebase": "^5.5.9",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@navikt/create-react-app-typescript-less": "^1.0.0-beta.16",
+    "@types/chai": "^4.1.7",
     "@types/classnames": "^2.2.6",
     "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.118",
@@ -70,6 +72,6 @@
     "less-watch-compiler": "^1.13.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.15.2",
-    "typescript": "^3.1.6"
+    "typescript": "^3.2.2"
   }
 }
