--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "classnames": "^2.2.6",
     "event-stream": "^4.0.1",
     "express": "^4.16.4",
-    "express-http-proxy": "^1.5.0",
     "firebase": "^5.5.9",
     "helmet": "^3.15.0",
+    "http-proxy-middleware": "^0.19.1",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.22.2",
     "nav-frontend-chevron-style": "^0.3.4",
