--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "react-intl": "^2.7.2",
     "react-maskedinput": "^4.0.1",
     "react-motion": "^0.5.2",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-react": "^3.6.0"
   },
   "scripts": {
     "start": "craco start",
@@ -82,7 +85,7 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not ie <= 11",
+    "not ie < 10",
     "not op_mini all"
   ]
 }
