--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "nav-frontend-stegindikator-style": "^1.0.13",
     "nav-frontend-typografi": "^2.0.6",
     "nav-frontend-typografi-style": "^1.0.10",
+    "nav-frontend-veileder": "^2.0.2",
+    "nav-frontend-veileder-style": "^2.0.2",
+    "nav-frontend-veilederpanel": "^0.1.3",
+    "nav-frontend-veilederpanel-style": "0.0.10",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-collapse": "^4.0.3",
