--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "craco-less": "^1.5.2",
     "event-stream": "^4.0.1",
     "express": "^4.16.4",
-    "firebase": "^5.5.9",
     "helmet": "^3.15.0",
     "http-proxy-middleware": "^0.19.1",
     "lodash.throttle": "^4.1.1",
@@ -53,7 +52,7 @@
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.6.3",
     "react-intl": "^2.7.2",
-    "react-maskedinput": "^4.0.1",
+    "react-maskedenput": "^4.0.1",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.3.1",
     "tslint": "^5.12.0",
