--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.6.3",
     "react-intl": "^2.7.2",
-    "react-maskedenput": "^4.0.1",
+    "react-maskedinput": "^4.0.1",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.3.1",
     "tslint": "^5.12.0",
