--- a/nais-prod-sbs.yaml
+++ b/nais-prod-sbs.yaml
@@ -9,8 +9,9 @@ spec:
   image: navikt/tiltaksgjennomforing:latest
   team: teamtag
   port: 3000
+  secrets: true
   ingresses:
-  - https://arbeidsgiver.nais.adeo.no/tiltaksgjennomforing
+  - https://arbeidsgiver.nav.no/tiltaksgjennomforing
   liveness:
     path: /tiltaksgjennomforing/internal/isAlive
     initialDelay: 20
@@ -21,6 +22,6 @@ spec:
   - name: API_GATEWAY
     value: https://arbeidsgiver.nais.adeo.no
   - name: LOGIN_URL
-    value: https://loginservice.nais.adeo.no/login?redirect=https://arbeidsgiver.nais.adeo.no/tiltaksgjennomforing
+    value: https://loginservice.nav.no/login?redirect=https://arbeidsgiver.nav.no/tiltaksgjennomforing
   - name: LOGOUT_URL
-    value: https://loginservice.nais.adeo.no/slo
+    value: https://loginservice.nav.no/slo
