TAG-120: Endrer variabelnavn.

--- a/nais-preprod-sbs.yaml
+++ b/nais-preprod-sbs.yaml
@@ -9,7 +9,8 @@ spec:
   image: navikt/tiltaksgjennomforing:latest
   team: teamtag
   port: 3000
-  secrets: true
+  vault:
+    enabled: true
   ingresses:
   - https://arbeidsgiver-q.nav.no/tiltaksgjennomforing
   liveness:
