--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "/tiltaksgjennomforing",
   "private": true,
   "dependencies": {
+    "@types/fetch-mock": "^7.2.1",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "chai": "^4.2.0",
@@ -11,6 +12,7 @@
     "craco-less": "^1.5.2",
     "event-stream": "^4.0.1",
     "express": "^4.16.4",
+    "fetch-mock": "^7.3.0",
     "helmet": "^3.15.0",
     "http-proxy-middleware": "^0.19.1",
     "lodash.throttle": "^4.1.1",
