TAG-236 Bruk egen miljøvariabel for mock

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "scripts": {
     "start": "craco start",
+    "mock": "REACT_APP_MOCK=true npm start",
     "build": "craco build",
     "test": "craco test",
     "server": "node server.js"
