--- a/nais-prod-sbs.yaml
+++ b/nais-prod-sbs.yaml
@@ -9,7 +9,8 @@ spec:
   image: navikt/tiltaksgjennomforing:latest
   team: teamtag
   port: 3000
-  secrets: true
+  vault:
+    enabled: true
   ingresses:
   - https://arbeidsgiver.nav.no/tiltaksgjennomforing
   liveness:
@@ -20,7 +21,7 @@ spec:
     initialDelay: 20
   env:
   - name: API_GATEWAY
-    value: https://arbeidsgiver.nais.adeo.no
+    value: https://api-gw.oera.no
   - name: LOGIN_URL
     value: https://loginservice.nav.no/login?redirect=https://arbeidsgiver.nav.no/tiltaksgjennomforing
   - name: LOGOUT_URL
