TAG-120: Endring i Dockerfile.

--- a/nais-preprod-sbs.yaml
+++ b/nais-preprod-sbs.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     team: teamtag
 spec:
-  image: navikt/tiltaksgjennomforing:latest
+  image: navikt/tiltaksgjennomforing:367
   team: teamtag
   port: 3000
   vault:
