--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "http-proxy-middleware": "^0.19.1",
+    "intl": "^1.2.5",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
     "nav-frontend-alertstriper": "^1.0.29",
@@ -47,6 +48,7 @@
     "nav-frontend-veilederpanel-style": "0.0.14",
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
+    "react-app-polyfill": "^0.2.1",
     "react-collapse": "^4.0.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-day-picker": "^7.2.4",
@@ -75,7 +77,6 @@
     "@types/lodash": "^4.14.120",
     "@types/node": "^10.12.21",
     "@types/react": "^16.8.2",
-    "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-collapse": "^4.0.2",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-day-picker": "^5.3.0",
