TAG-188: AvtaleOversikt som landingside/forside.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "nav-frontend-alertstriper": "^1.0.29",
     "nav-frontend-alertstriper-style": "^0.2.50",
     "nav-frontend-chevron-style": "^0.3.4",
-    "nav-frontend-core": "^4.0.6",
+    "nav-frontend-core": "^4.0.8",
     "nav-frontend-ekspanderbartpanel": "^1.0.20",
     "nav-frontend-ekspanderbartpanel-style": "^0.3.18",
     "nav-frontend-etiketter": "^1.0.17",
@@ -30,23 +30,25 @@
     "nav-frontend-js-utils": "^1.0.6",
     "nav-frontend-knapper": "^1.0.23",
     "nav-frontend-knapper-style": "^0.3.21",
+    "nav-frontend-lenkepanel": "^1.0.27",
+    "nav-frontend-lenkepanel-style": "^0.3.24",
     "nav-frontend-lenker": "^1.0.20",
     "nav-frontend-lenker-style": "^0.2.18",
     "nav-frontend-lukknapp": "^1.0.17",
     "nav-frontend-lukknapp-style": "^0.2.17",
     "nav-frontend-paneler": "^1.0.12",
-    "nav-frontend-paneler-style": "^0.3.13",
+    "nav-frontend-paneler-style": "^0.3.14",
     "nav-frontend-skjema": "^1.0.56",
     "nav-frontend-skjema-style": "^1.0.37",
     "nav-frontend-stegindikator": "0.0.27",
     "nav-frontend-stegindikator-style": "^1.0.17",
-    "nav-frontend-typografi": "^2.0.7",
-    "nav-frontend-typografi-style": "^1.0.11",
+    "nav-frontend-typografi": "^2.0.10",
+    "nav-frontend-typografi-style": "^1.0.12",
     "nav-frontend-veileder": "^2.0.6",
     "nav-frontend-veileder-style": "^2.0.6",
     "nav-frontend-veilederpanel": "^0.1.8",
     "nav-frontend-veilederpanel-style": "0.0.14",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-app-polyfill": "^0.2.1",
     "react-collapse": "^4.0.3",
