--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "/tiltaksgjennomforing",
   "dependencies": {
+    "@types/react-responsive": "^3.0.3",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "chai": "^4.2.0",
@@ -18,6 +19,7 @@
     "moment": "^2.24.0",
     "nav-frontend-alertstriper": "^1.0.29",
     "nav-frontend-alertstriper-style": "^0.2.50",
+    "nav-frontend-chevron": "^1.0.9",
     "nav-frontend-chevron-style": "^0.3.4",
     "nav-frontend-core": "^4.0.8",
     "nav-frontend-ekspanderbartpanel": "^1.0.20",
@@ -49,7 +51,7 @@
     "nav-frontend-veilederpanel": "^0.1.8",
     "nav-frontend-veilederpanel-style": "0.0.14",
     "prop-types": "^15.7.2",
-    "react": "^16.8.1",
+    "react": "^16.8.4",
     "react-app-polyfill": "^0.2.1",
     "react-collapse": "^4.0.3",
     "react-copy-to-clipboard": "^5.0.1",
@@ -58,6 +60,7 @@
     "react-intl": "^2.8.0",
     "react-maskedinput": "^4.0.1",
     "react-motion": "^0.5.2",
+    "react-responsive": "^6.1.1",
     "react-router-dom": "^4.3.1",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
