--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "nav-frontend-lenkepanel-style": "^0.3.24",
     "nav-frontend-lenker": "^1.0.20",
     "nav-frontend-lenker-style": "^0.2.18",
-    "nav-frontend-lukknapp": "^1.0.17",
-    "nav-frontend-lukknapp-style": "^0.2.17",
+    "nav-frontend-lukknapp": "^1.0.20",
+    "nav-frontend-lukknapp-style": "^0.2.18",
+    "nav-frontend-modal": "^1.0.27",
+    "nav-frontend-modal-style": "^0.3.28",
     "nav-frontend-paneler": "^1.0.12",
     "nav-frontend-paneler-style": "^0.3.14",
     "nav-frontend-skjema": "^1.0.56",
@@ -49,7 +51,7 @@
     "nav-frontend-veilederpanel": "^0.1.8",
     "nav-frontend-veilederpanel-style": "0.0.14",
     "prop-types": "^15.7.2",
-    "react": "^16.8.1",
+    "react": "^16.8.4",
     "react-app-polyfill": "^0.2.1",
     "react-collapse": "^4.0.3",
     "react-copy-to-clipboard": "^5.0.1",
@@ -57,6 +59,7 @@
     "react-dom": "^16.8.1",
     "react-intl": "^2.8.0",
     "react-maskedinput": "^4.0.1",
+    "react-modal": "^3.8.1",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.3.1",
     "tslint": "^5.12.1",
