--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ commands:
       - run: # Brukernavn og passord til Github ligger i miljøvariable DEPLOYMENT_USERNAME og DEPLOYMENT_PASSWORD
           name: Deploy til << parameters.miljo >>
           command: |
-            deployment-cli deploy create --environment=<< parameters.miljo >> --repository=navikt/tiltaksgjennomforing --team=teamtag --resource=nais-<< parameters.miljo >>.yaml --version=$CIRCLE_SHA1
+            deployment-cli deploy create --environment=<< parameters.miljo >> --repository=navikt/tiltaksgjennomforing --team=teamtag --resource=naiserator.yaml --version=$CIRCLE_SHA1 --config=nais/<< parameters.miljo >>.json
 
 workflows:
   version: 2.1
