--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -12,7 +12,7 @@ spec:
   vault:
     enabled: true
   ingresses:
-  - https://arbeidsgiver.nav.no/tiltaksgjennomforing
+  - {{inngress}}
   liveness:
     path: /tiltaksgjennomforing/internal/isAlive
     initialDelay: 5
@@ -21,8 +21,10 @@ spec:
     initialDelay: 5
   env:
   - name: APIGW_URL
-    value: https://api-gw.oera.no
+    value: {{api-gw}}
+  - name: ISSO_LOGIN_URL
+    value: {{isso-login-url}}
   - name: SELVBETJENING_LOGIN_URL
-    value: https://loginservice.nav.no/login?redirect=https://arbeidsgiver.nav.no/tiltaksgjennomforing
+    value: {{selvbetjening-login-url}}
   - name: LOGOUT_URL
-    value: https://loginservice.nav.no/slo
+    value: {{logout-url}}
