--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -21,7 +21,7 @@ spec:
     initialDelay: 5
   env:
   - name: APIGW_URL
-    value: {{{api-gw}}}
+    value: {{{api-gw-url}}}
   - name: ISSO_LOGIN_URL
     value: {{{isso-login-url}}}
   - name: SELVBETJENING_LOGIN_URL
