TAG-487: Retter typo.

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -12,7 +12,7 @@ spec:
   vault:
     enabled: true
   ingresses:
-  - {{{inngress}}}
+  - {{{ingress}}}
   liveness:
     path: /tiltaksgjennomforing/internal/isAlive
     initialDelay: 5
