--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
 
   deploy-til-dev:
     docker:
-      - image: "navikt/deployment-cli:v0.1.2"
+      - image: "navikt/deployment-cli:v0.1.5"
     steps:
       - checkout
       - deploy:
@@ -43,7 +43,7 @@ jobs:
           miljo: "dev-sbs"
   deploy-til-prod:
     docker:
-      - image: "navikt/deployment-cli:v0.1.2"
+      - image: "navikt/deployment-cli:v0.1.5"
     steps:
       - checkout
       - deploy:
@@ -61,7 +61,7 @@ commands:
       - run: # Brukernavn og passord til Github ligger i miljøvariable DEPLOYMENT_USERNAME og DEPLOYMENT_PASSWORD
           name: Deploy til << parameters.miljo >>
           command: |
-            deployment-cli deploy create --environment=<< parameters.miljo >> --repository=navikt/tiltaksgjennomforing --team=teamtag --resource=naiserator.yaml --version=$CIRCLE_SHA1 --config=nais/<< parameters.miljo >>.json
+            deployment-cli deploy create --cluster=<< parameters.miljo >> --repository=navikt/tiltaksgjennomforing --team=teamtag --resource=naiserator.yaml --version=$CIRCLE_SHA1 --vars=nais/<< parameters.miljo >>.json
 
 workflows:
   version: 2.1
