--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -12,7 +12,7 @@ spec:
     vault:
         enabled: true
     ingresses:
-        - { { { ingress } } }
+        - '{{{ingress}}}'
     liveness:
         path: /tiltaksgjennomforing/internal/isAlive
         initialDelay: 5
@@ -21,10 +21,10 @@ spec:
         initialDelay: 5
     env:
         - name: APIGW_URL
-          value: { { { api-gw-url } } }
+          value: '{{{api-gw-url}}}'
         - name: ISSO_LOGIN_URL
           value: '{{{isso-login-url}}}'
         - name: SELVBETJENING_LOGIN_URL
           value: '{{{selvbetjening-login-url}}}'
         - name: LOGOUT_URL
-          value: { { { logout-url } } }
+          value: '{{{logout-url}}}'
