--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "helmet": "^3.15.0",
         "http-proxy-middleware": "^0.19.1",
         "intl": "^1.2.5",
+        "lodash.partial": "^4.2.1",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
         "nav-frontend-alertstriper": "^1.0.34",
