ekstern dekoratør lagt til i devleopment

--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
         "babel-runtime": "^6.26.0",
         "chai": "^4.2.0",
         "classnames": "^2.2.6",
-        "craco-less": "^1.6.0",
+        "craco-less": "1.7.0",
         "event-stream": "^4.0.1",
         "express": "^4.16.4",
         "helmet": "^3.15.0",
         "http-proxy-middleware": "^0.19.1",
         "intl": "^1.2.5",
+        "less-plugin-npm-import": "^2.1.0",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
+        "mustache-express": "^1.2.8",
         "nav-frontend-alertstriper": "^1.0.34",
         "nav-frontend-alertstriper-style": "^0.2.53",
         "nav-frontend-chevron": "^1.0.9",
@@ -28,7 +30,7 @@
         "nav-frontend-etiketter-style": "^0.3.15",
         "nav-frontend-hjelpetekst": "^1.0.31",
         "nav-frontend-hjelpetekst-style": "^0.3.27",
-        "nav-frontend-ikoner-assets": "^0.2.32",
+        "nav-frontend-ikoner-assets": "^1.0.1",
         "nav-frontend-js-utils": "^1.0.6",
         "nav-frontend-knapper": "^1.0.23",
         "nav-frontend-knapper-style": "^0.3.21",
@@ -51,7 +53,7 @@
         "nav-frontend-veileder": "^2.0.6",
         "nav-frontend-veileder-style": "^2.0.6",
         "nav-frontend-veilederpanel": "^0.1.8",
-        "nav-frontend-veilederpanel-style": "0.0.14",
+        "nav-frontend-veilederpanel-style": "0.0.17",
         "prop-types": "^15.7.2",
         "react": "^16.8.4",
         "react-app-polyfill": "^0.2.1",
@@ -71,13 +73,14 @@
     },
     "scripts": {
         "start": "craco start",
+        "start-dec": "cross-env DECORATOR=\"true\" npm start",
         "mock": "REACT_APP_MOCK=true npm start",
         "build": "craco build",
         "test": "craco test",
         "server": "node server.js"
     },
     "devDependencies": {
-        "@craco/craco": "^3.4.1",
+        "@craco/craco": "3.6.0",
         "@types/chai": "^4.1.7",
         "@types/classnames": "^2.2.7",
         "@types/fetch-mock": "^7.2.2",
@@ -92,6 +95,7 @@
         "@types/react-intl": "^2.3.16",
         "@types/react-maskedinput": "^4.0.4",
         "@types/react-router-dom": "^4.3.1",
+        "cross-env": "^5.2.0",
         "fetch-mock": "^7.3.0",
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
