fjernet inline scripts fra index og fikset env-verdier for miljoene

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -30,5 +30,5 @@ spec:
           value: '{{{logout-url}}}'
         - name: INTERN_DECORATOR
           value: '{{{decorator-url}}}'
-        - name: INTERN_FLATE
+        - name: INTERNFLATE
           value: '{{{er-internflate}}}'
