--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
         "less-watch-compiler": "^1.13.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^1.16.4",
+        "react-dev-utils": "^9.0.1",
         "react-scripts": "^2.1.3",
         "typescript": "^3.3.1"
     },
