fikset html-webpack-plugin feil. Ved bruk av webpack-devServer-middleware, trenger vi legge til html-webpack-harddiskplugin for at injection av scripts skal fungere

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "homepage": "/tiltaksgjennomforing",
     "dependencies": {
         "@types/react-responsive": "^3.0.3",
+        "acorn": "^6.0.0",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "chai": "^4.2.0",
@@ -13,6 +14,8 @@
         "event-stream": "^4.0.1",
         "express": "^4.16.4",
         "helmet": "^3.15.0",
+        "html-webpack-harddisk-plugin": "^1.0.1",
+        "html-webpack-plugin": "^3.2.0",
         "http-proxy-middleware": "^0.19.1",
         "intl": "^1.2.5",
         "less-plugin-npm-import": "^2.1.0",
@@ -61,7 +64,7 @@
         "react-collapse": "^4.0.3",
         "react-copy-to-clipboard": "^5.0.1",
         "react-day-picker": "^7.2.4",
-        "react-dom": "^16.8.1",
+        "react-dom": "^16.8.4",
         "react-intl": "^2.8.0",
         "react-maskedinput": "^4.0.1",
         "react-modal": "^3.8.1",
@@ -90,11 +93,11 @@
         "@types/jest": "^23.3.14",
         "@types/lodash": "^4.14.120",
         "@types/node": "^10.12.21",
-        "@types/react": "^16.8.2",
+        "@types/react": "^16.8.4",
         "@types/react-collapse": "^4.0.2",
         "@types/react-copy-to-clipboard": "^4.2.6",
         "@types/react-day-picker": "^5.3.0",
-        "@types/react-dom": "^16.8.0",
+        "@types/react-dom": "^16.8.4",
         "@types/react-intl": "^2.3.16",
         "@types/react-maskedinput": "^4.0.4",
         "@types/react-router-dom": "^4.3.1",
