lagt til appress url i env settings, la til valg aa kunne starte server i dev i getDecorator() func

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -32,3 +32,5 @@ spec:
           value: '{{{decorator-url}}}'
         - name: INTERNFLATE
           value: '{{{er-internflate}}}'
+        - name: EKSTERN_DECORATOR
+          value: '{{{ekstern-url}}}'
