--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "scripts": {
         "start": "craco start",
         "start-dec": "cross-env DECORATOR=\"true\" npm start",
-        "start-intern": "cross-env INTERNFLATE=true npm start",
+        "start-intern": "cross-env INTERNFLATE=\"true\" npm start",
         "mock": "REACT_APP_MOCK=true npm start",
         "build": "craco build",
         "test": "craco test",
