--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "nav-frontend-alertstriper-style": "2.0.2",
         "nav-frontend-chevron": "^1.0.9",
         "nav-frontend-chevron-style": "^0.3.4",
-        "nav-frontend-core": "^4.0.9",
+        "nav-frontend-core": "^4.0.10",
         "nav-frontend-ekspanderbartpanel": "^1.0.28",
         "nav-frontend-ekspanderbartpanel-style": "^0.3.20",
         "nav-frontend-etiketter": "^1.0.23",
@@ -30,7 +30,7 @@
         "nav-frontend-hjelpetekst": "^1.0.39",
         "nav-frontend-hjelpetekst-style": "^0.3.29",
         "nav-frontend-ikoner-assets": "^1.0.1",
-        "nav-frontend-js-utils": "^1.0.6",
+        "nav-frontend-js-utils": "^1.0.7",
         "nav-frontend-knapper": "^1.0.23",
         "nav-frontend-knapper-style": "^0.3.21",
         "nav-frontend-lenkepanel": "^1.0.27",
@@ -47,14 +47,16 @@
         "nav-frontend-skjema-style": "^1.0.37",
         "nav-frontend-stegindikator": "0.0.36",
         "nav-frontend-stegindikator-style": "^1.0.17",
+        "nav-frontend-tabs": "0.0.33",
+        "nav-frontend-tabs-style": "0.0.19",
         "nav-frontend-typografi": "^2.0.12",
-        "nav-frontend-typografi-style": "^1.0.13",
+        "nav-frontend-typografi-style": "^1.0.14",
         "nav-frontend-veileder": "^2.0.6",
         "nav-frontend-veileder-style": "^2.0.6",
         "nav-frontend-veilederpanel": "^0.1.8",
         "nav-frontend-veilederpanel-style": "0.0.17",
         "prop-types": "^15.7.2",
-        "react": "^16.8.4",
+        "react": "^16.9.0",
         "react-app-polyfill": "^0.2.1",
         "react-collapse": "^4.0.3",
         "react-copy-to-clipboard": "^5.0.1",
