--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "homepage": "/tiltaksgjennomforing",
     "dependencies": {
+        "@sentry/browser": "^5.6.3",
         "@types/react-responsive": "^3.0.3",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
@@ -12,7 +13,7 @@
         "craco-less": "^1.6.0",
         "event-stream": "^4.0.1",
         "express": "^4.16.4",
-        "helmet": "^3.15.0",
+        "helmet": "^3.21.1",
         "http-proxy-middleware": "^0.19.1",
         "intl": "^1.2.5",
         "lodash.partial": "^4.2.1",
@@ -72,8 +73,8 @@
     },
     "scripts": {
         "start": "craco start",
-        "mock": "REACT_APP_MOCK=true npm start",
-        "build": "craco build",
+        "mock": "cross-env REACT_APP_MOCK=true npm start",
+        "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "test": "craco test",
         "server": "node server.js"
     },
@@ -93,6 +94,7 @@
         "@types/react-intl": "^2.3.16",
         "@types/react-maskedinput": "^4.0.4",
         "@types/react-router-dom": "^4.3.1",
+        "cross-env": "^6.0.2",
         "fetch-mock": "^7.3.0",
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
