--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,4 @@
-node_modules
-npm-debug.log
-Dockerfile*
-docker-compose*
-.dockerignore
-.git
-.gitignore
-README.md
-LICENSE
-.vscode
+*
+!build
+!src/setupProxy.js
+!server.js
