--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
     "version": "0.1.0",
     "private": true,
     "homepage": "/tiltaksgjennomforing",
+    "scripts": {
+        "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
+        "mock": "cross-env REACT_APP_MOCK=true npm start",
+        "server": "node server.js",
+        "start": "craco start",
+        "test": "craco test",
+        "up": "docker-compose up -d --remove-orphans --build"
+    },
     "dependencies": {
         "@sentry/browser": "^5.6.3",
-        "@types/react-responsive": "^3.0.3",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
-        "chai": "^4.2.0",
         "classnames": "^2.2.6",
-        "craco-less": "^1.6.0",
         "event-stream": "^4.0.1",
-        "express": "^4.16.4",
-        "helmet": "^3.21.1",
-        "http-proxy-middleware": "^0.19.1",
         "intl": "^1.2.5",
         "lodash.partial": "^4.2.1",
         "lodash.throttle": "^4.1.1",
@@ -66,20 +68,10 @@
         "react-modal": "^3.8.1",
         "react-motion": "^0.5.2",
         "react-responsive": "^6.1.1",
-        "react-router-dom": "^4.3.1",
-        "tslint": "^5.12.1",
-        "tslint-config-prettier": "^1.18.0",
-        "tslint-react": "^3.6.0"
-    },
-    "scripts": {
-        "start": "craco start",
-        "mock": "cross-env REACT_APP_MOCK=true npm start",
-        "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
-        "test": "craco test",
-        "server": "node server.js"
+        "react-router-dom": "^4.3.1"
     },
     "devDependencies": {
-        "@craco/craco": "^3.4.1",
+        "@craco/craco": "^5.3.0",
         "@types/chai": "^4.1.7",
         "@types/classnames": "^2.2.7",
         "@types/fetch-mock": "^7.2.2",
@@ -93,14 +85,21 @@
         "@types/react-dom": "^16.8.0",
         "@types/react-intl": "^2.3.16",
         "@types/react-maskedinput": "^4.0.4",
+        "@types/react-responsive": "^3.0.3",
         "@types/react-router-dom": "^4.3.1",
+        "chai": "^4.2.0",
+        "craco-less": "^1.6.0",
         "cross-env": "^6.0.2",
         "fetch-mock": "^7.3.0",
+        "http-proxy-middleware": "^0.19.1",
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^1.16.4",
         "react-scripts": "^2.1.3",
+        "tslint": "^5.12.1",
+        "tslint-config-prettier": "^1.18.0",
+        "tslint-react": "^3.6.0",
         "typescript": "^3.3.1"
     },
     "browserslist": [
