Lagt til variabel i json filene for vault true/false

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -10,7 +10,7 @@ spec:
     team: teamtag
     port: 3000
     vault:
-        enabled: {{#if kv-path}}true{{#else}}false{{/if}}
+        enabled: {{vault-enabled}}
         paths:
           - kvPath: '{{{kv-path}}}'
             mountPath: /var/run/secrets/nais.io/vault
