--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -10,7 +10,10 @@ spec:
     team: teamtag
     port: 3000
     vault:
-        enabled: true
+        enabled: {{vault-enabled}}
+        paths:
+          - kvPath: '{{{kv-path}}}'
+            mountPath: /var/run/secrets/nais.io/vault
     ingresses:
         - '{{{ingress}}}'
     liveness:
