--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "nav-frontend-etiketter-style": "^0.3.17",
         "nav-frontend-hjelpetekst": "^1.0.39",
         "nav-frontend-hjelpetekst-style": "^0.3.29",
-        "nav-frontend-ikoner-assets": "^1.0.1",
+        "nav-frontend-ikoner-assets": "^1.0.2",
         "nav-frontend-js-utils": "^1.0.6",
         "nav-frontend-knapper": "^1.0.23",
         "nav-frontend-knapper-style": "^0.3.21",
@@ -50,6 +50,8 @@
         "nav-frontend-paneler-style": "^0.3.15",
         "nav-frontend-skjema": "^1.0.56",
         "nav-frontend-skjema-style": "^1.0.37",
+        "nav-frontend-spinner": "^1.0.19",
+        "nav-frontend-spinner-style": "^0.2.5",
         "nav-frontend-stegindikator": "0.0.36",
         "nav-frontend-stegindikator-style": "^1.0.17",
         "nav-frontend-typografi": "^2.0.12",
@@ -59,7 +61,7 @@
         "nav-frontend-veilederpanel": "^0.1.8",
         "nav-frontend-veilederpanel-style": "0.0.17",
         "prop-types": "^15.7.2",
-        "react": "^16.8.4",
+        "react": "^16.11.0",
         "react-app-polyfill": "^0.2.1",
         "react-collapse": "^4.0.3",
         "react-copy-to-clipboard": "^5.0.1",
