--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "dependencies": {
         "@sentry/browser": "^5.7.1",
+        "@types/amplitude-js": "^4.4.4",
+        "amplitude-js": "^5.6.0",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "classnames": "^2.2.6",
