--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
         "npm-run-all": "^4.1.5",
-        "prettier": "^1.16.4",
+        "prettier": "1.19.1",
         "react-scripts": "^3.2.0",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
