--- a/package.json
+++ b/package.json
@@ -105,10 +105,12 @@
         "fetch-mock": "^7.7.3",
         "glob": "^7.1.5",
         "http-proxy-middleware": "^0.19.1",
+        "husky": "^3.1.0",
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
         "npm-run-all": "^4.1.5",
-        "prettier": "^1.16.4",
+        "prettier": "^1.19.1",
+        "pretty-quick": "^2.0.1",
         "react-scripts": "^3.2.0",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
@@ -121,5 +123,10 @@
         "not dead",
         "not ie < 10",
         "not op_mini all"
-    ]
+    ],
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged --pattern \"**/*.*(js|jsx|ts|tsx|css|scss|less)\""
+        }
+    }
 }
