--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
         "nav-frontend-spinner-style": "^0.2.5",
         "nav-frontend-stegindikator": "0.0.36",
         "nav-frontend-stegindikator-style": "^1.0.25",
+        "nav-frontend-tabs": "0.0.36",
+        "nav-frontend-tabs-style": "0.0.22",
         "nav-frontend-typografi": "^2.0.16",
         "nav-frontend-typografi-style": "^1.0.17",
         "nav-frontend-veileder": "^2.0.13",
@@ -65,7 +67,7 @@
         "nav-frontend-veilederpanel": "^0.1.18",
         "nav-frontend-veilederpanel-style": "0.0.17",
         "prop-types": "^15.7.2",
-        "react": "^16.11.0",
+        "react": "^16.12.0",
         "react-app-polyfill": "^0.2.1",
         "react-collapse": "^4.0.3",
         "react-copy-to-clipboard": "^5.0.1",
