Lagt til sokeboks for veileder

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "nav-frontend-hjelpetekst": "^1.0.44",
         "nav-frontend-hjelpetekst-style": "^0.3.34",
         "nav-frontend-ikoner-assets": "^1.0.3",
+        "nav-frontend-ikonknapper": "0.0.10",
         "nav-frontend-js-utils": "^1.0.8",
         "nav-frontend-knapper": "^1.0.37",
         "nav-frontend-knapper-style": "^0.3.32",
