--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "react-day-picker": "^7.4.0",
         "react-dom": "^16.11.0",
         "react-intl": "^2.8.0",
+        "react-loading-skeleton": "^1.3.0",
         "react-maskedinput": "^4.0.1",
         "react-modal": "^3.11.1",
         "react-motion": "^0.5.2",
