--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "nav-frontend-hjelpetekst": "^1.0.44",
         "nav-frontend-hjelpetekst-style": "^0.3.34",
         "nav-frontend-ikoner-assets": "^1.0.3",
+        "nav-frontend-ikonknapper": "0.0.10",
         "nav-frontend-js-utils": "^1.0.8",
         "nav-frontend-knapper": "^1.0.37",
         "nav-frontend-knapper-style": "^0.3.32",
@@ -73,6 +74,7 @@
         "react-day-picker": "^7.4.0",
         "react-dom": "^16.11.0",
         "react-intl": "^2.8.0",
+        "react-loading-skeleton": "^1.3.0",
         "react-maskedinput": "^4.0.1",
         "react-modal": "^3.11.1",
         "react-motion": "^0.5.2",
