--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "nav-frontend-veileder": "^2.0.13",
         "nav-frontend-veileder-style": "^2.0.10",
         "nav-frontend-veilederpanel": "^0.1.18",
-        "nav-frontend-veilederpanel-style": "0.0.17",
+        "nav-frontend-veilederpanel-style": "^0.0.21",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-app-polyfill": "^0.2.1",
@@ -81,7 +81,7 @@
         "react-maskedinput": "^4.0.1",
         "react-modal": "^3.11.1",
         "react-motion": "^0.5.2",
-        "react-responsive": "^6.1.1",
+        "react-responsive": "^8.0.3",
         "react-router-dom": "^5.1.2",
         "url-search-params-polyfill": "^7.0.1"
     },
@@ -102,7 +102,7 @@
         "@types/react-dom": "^16.9.3",
         "@types/react-intl": "^2.3.16",
         "@types/react-maskedinput": "^4.0.4",
-        "@types/react-responsive": "^3.0.3",
+        "@types/react-responsive": "^8.0.2",
         "@types/react-router-dom": "^5.1.2",
         "chai": "^4.2.0",
         "craco-less": "^1.14.4",
