lagt til interflate-dekorator som plugin til dev, og i server til dev|prod

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -28,3 +28,9 @@ spec:
           value: '{{{selvbetjening-login-url}}}'
         - name: LOGOUT_URL
           value: '{{{logout-url}}}'
+        - name: ENABLE_INTERNAL_MENU
+          value: '{{{enable-internal-menu}}}'
+        - name: DECORATOR_INTERNAL_SCRIPT
+          value: '{{{decorator-external-script}}}'
+        - name: DECORATOR_INTERNAL_STYLING
+          value: '{{{decorator-external-styling}}}'
