--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
+        "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=\"enable\" craco start",
         "test": "cross-env CI=true craco test -w 1",
         "test:config": "node -e 'console.dir(require(\"./jest.config.js\"))'",
         "test:help": "craco test --help",
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
+        "@navikt/navspa": "^1.0.3",
         "@sentry/browser": "^5.7.1",
         "@types/amplitude-js": "^4.4.4",
         "amplitude-js": "^5.6.0",
@@ -23,6 +25,7 @@
         "classnames": "^2.2.6",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
+        "fs-extra": "^8.1.0",
         "intl": "^1.2.5",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
@@ -68,6 +71,7 @@
         "nav-frontend-veileder-style": "^2.0.10",
         "nav-frontend-veilederpanel": "^0.1.18",
         "nav-frontend-veilederpanel-style": "0.0.17",
+        "node-cache": "^4.2.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-app-polyfill": "^0.2.1",
