lagt til ekstern dekorator paa dev-server, dev-sbs og sbs  (#255)
* lagt til ekstern dekorator paa dev-server, dev-sbs og sbs

* lagt til baseline menyen som backup naar fetch av gamle menyen failer

* lagt til dekorator url i sbs-prod og fjernet uppercase i funksjonsnavn i plugin

* fikset camelcase pa funksjonsnavn i filen og fjernet ekstra mellomrom i yaml fil

* forandret litt paa visningslogikken til Innloggingslinje.tsx

* la til type-setting paa return verdier til funksjoner

* satt presidens paa appen in body styling, som overstyrer dekorator styling

* lagt til server fetch av dekorator, med caching, ryddet opp i tidligere endringer

* satt title paa dokumentet til aa vaere statisk

* fjernet unodvendig console logging fra server

* oppdatert dockerfile med pakke

* lagt til pakker i dockerfile og fjernet pakke som ikke blir brukt

* forandret litt paa sjekk om backup menyen skal brukes, lagt til versjon i dockerfile

* juster plassering av dekoratør tags i template-fil

Co-authored-by: Bendik Ibenholt <benibe88@gmail.com>

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -28,3 +28,7 @@ spec:
           value: '{{{selvbetjening-login-url}}}'
         - name: LOGOUT_URL
           value: '{{{logout-url}}}'
+        - name: ENABLE_EXTERNAL_MENU
+          value: '{{{enable-external-menu}}}'
+        - name: DECORATOR_EXTERNAL_URL
+          value: '{{{decorator-external-url}}}'
