--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
+        "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=\"enable\" craco start",
         "test": "cross-env CI=true craco test -w 1",
         "test:config": "node -e 'console.dir(require(\"./jest.config.js\"))'",
         "test:help": "craco test --help",
@@ -24,6 +25,8 @@
         "classnames": "^2.2.6",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
+        "fs-extra": "^8.1.0",
+        "html-webpack-plugin": "^3.2.0",
         "intl": "^1.2.5",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
@@ -69,6 +72,7 @@
         "nav-frontend-veileder-style": "^2.0.10",
         "nav-frontend-veilederpanel": "^0.1.18",
         "nav-frontend-veilederpanel-style": "^0.0.21",
+        "node-cache": "4.2.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-app-polyfill": "^0.2.1",
@@ -107,7 +111,7 @@
         "@types/react-router-dom": "^5.1.2",
         "chai": "^4.2.0",
         "craco-less": "^1.14.4",
-        "cross-env": "^6.0.2",
+        "cross-env": "^6.0.3",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.15.1",
         "enzyme-react-intl": "^2.0.6",
